# to-dolistbrokenno

./: .coverage  .gitignore  DATAMUT_EXECUTIVE_BRIEF.txt  README.md  chain_test.json  clean-report.html  datamut-report.html  datamut-report.json  debug-report.html  debug_ast.py  default_test.html  enhanced-report.html  final_analysis.json  function_severity_catalog.txt  pandas-grouping-report.html  pandas_report.html  pandas_report.json  pandas_report.sarif  pyproject.toml  t_analysis.json  t_analysis_fixed.json  t_analysis_improved.html  test-grouping-fixed.html  test-grouping-report.html  test_final.py
.github/workflows/: ci.yml
datamut/: __init__.py  __main__.py  cli.py
datamut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datamut/core/: __init__.py  context.py  emitter.py  finding.py  hardcoded_visitor.py  loader.py  visitor.py
datamut/plugins/: __init__.py
datamut/render/: report.html
datamut/rules/: database.yml  hardcoded.yml  numpy.yml  pandas.yml  rfm.yml  sql.yml
datamut/visitors/: __init__.py  base.py  chain.py  hardcoded.py  master.py  mutation.py  sql.py
docs/: EXCEL_RULES.md
examples/: custom_rules_template.xlsx  data_analysis.py
testF/: test_edge_cases.py  test_mixed_operations.py  test_numpy_comprehensive.py  test_pandas_comprehensive.py  test_sql_comprehensive.py
tests/: __init__.py  t.py  test_code_snippet_extraction.py  test_hardcoded_detection.py  test_missing_mutations.py  test_pandas_detection.py  test_sql_detection.py  test_t_py_analysis.py
